<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewMovie"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/textViewMCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewMovie"
        app:layout_constraintTop_toTopOf="@+id/imageViewMovie"
        tools:text="@string/country"/>

    <TextView
        android:id="@+id/textViewMYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMCountry"
        app:layout_constraintStart_toStartOf="@+id/textViewMCountry"
        app:layout_constraintTop_toBottomOf="@+id/textViewMCountry"
        tools:text="@string/year"/>

    <TextView
        android:id="@+id/textViewMRuntime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMYear"
        app:layout_constraintStart_toStartOf="@+id/textViewMYear"
        app:layout_constraintTop_toBottomOf="@+id/textViewMYear"
        tools:text="@string/runtime"/>

    <TextView
        android:id="@+id/textViewMImdb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMRuntime"
        app:layout_constraintStart_toStartOf="@+id/textViewMRuntime"
        app:layout_constraintTop_toBottomOf="@+id/textViewMRuntime"
        tools:text="@string/imdb_point"/>

    <TextView
        android:id="@+id/textViewMGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMImdb"
        app:layout_constraintStart_toStartOf="@+id/textViewMImdb"
        app:layout_constraintTop_toBottomOf="@+id/textViewMImdb"
        tools:text="@string/genre"/>

    <TextView
        android:id="@+id/textViewMTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMovie"
        tools:text="@string/movie_title"/>

    <TextView
        android:id="@+id/textViewMPlot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewMTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewMTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/lorem" />

</androidx.constraintlayout.widget.ConstraintLayout>